zh-cn/15.3/user/search-field.rst
=================
搜索字段指定检索
=================

字段指定检索
==============

|Fess| 爬取的结果按标题、正文等各字段分别保存。可以指定这些字段进行搜索。通过指定字段进行搜索,可以按文档类型、大小等设置详细的搜索条件。

可用字段
---------------

默认情况下,可以指定以下字段进行搜索。

.. list-table::
   :header-rows: 1

   * - 字段名
     - 说明
   * - url
     - 爬取的 URL
   * - host
     - 爬取的 URL 中包含的主机名
   * - title
     - 标题
   * - content
     - 正文
   * - content_length
     - 爬取的文档大小
   * - last_modified
     - 爬取的文档的最后修改日期和时间
   * - mimetype
     - 文档的 MIME 类型

表: 可用字段列表


如果未指定字段,将以 title 和 content 为对象进行搜索。
也可以添加字段作为搜索对象。

当 HTML 文件作为搜索对象时,title 标签注册为 title 字段,body 标签以下的字符串注册为 content 字段。

使用方法
------

进行字段指定检索时,以"字段名:搜索词"的格式,用冒号(:)分隔字段名和搜索词,在搜索表单中输入并搜索。

对 title 字段以 fess 为搜索词进行搜索时,输入如下内容:

::

    title:fess

通过上述搜索,将显示 title 字段包含 fess 的文档作为搜索结果。

对 url 字段进行搜索时,输入如下内容:

::

   url:https\:\/\/fess.codelibs.org\/ja\/15.3\/*
   url:"https://fess.codelibs.org/ja/15.3/*"

前者可以使用通配符查询,因此可以写成 ``url:*\/\/fess.codelibs.org\/*`` 这样的形式。url 中的":"和"/"是保留字,请进行转义。后者不能使用通配符查询,但可以使用前缀查询。
